[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/bricks/08-Breakout-Tiles.png" type="Texture" id=1]
[ext_resource path="res://sprites/bricks/07-Breakout-Tiles.png" type="Texture" id=2]
[ext_resource path="res://scenes/level/Brick.gd" type="Script" id=3]
[ext_resource path="res://sprites/powers/31.png" type="Texture" id=4]
[ext_resource path="res://sprites/powers/28.png" type="Texture" id=5]
[ext_resource path="res://sprites/powers/29.png" type="Texture" id=6]
[ext_resource path="res://sprites/powers/30.png" type="Texture" id=7]
[ext_resource path="res://scenes/level/power.gd" type="Script" id=8]
[ext_resource path="res://sprites/bricks/15-Breakout-Tiles.png" type="Texture" id=9]
[ext_resource path="res://sprites/bricks/11-Breakout-Tiles.png" type="Texture" id=10]
[ext_resource path="res://sprites/bricks/16-Breakout-Tiles.png" type="Texture" id=11]
[ext_resource path="res://sprites/bricks/12-Breakout-Tiles.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "brickRed",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "brickGreen",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 12 ) ],
"loop": true,
"name": "brickBlue",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 179.5, 52.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 192.5, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "powers",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10.6066, 10.6066 )

[node name="Brick" type="Node2D"]
script = ExtResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 1 )
animation = "brickBlue"

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, 0 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]

[node name="powerBody" type="RigidBody2D" parent="." groups=["power"]]
mass = 0.01
gravity_scale = 0.0
contacts_reported = 377
contact_monitor = true
can_sleep = false
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="powerBody"]
scale = Vector2( 0.45614, 0.45614 )
frames = SubResource( 4 )
animation = "powers"

[node name="CollisionShape2D" type="CollisionShape2D" parent="powerBody"]
rotation = 0.785398
scale = Vector2( 1, 1 )
shape = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_ball_body_bricked"]
[connection signal="body_entered" from="powerBody" to="." method="_on_powerBody_body_entered"]
